La til en oppgave

--- a/source/blazorFagdag/blazorFagdag/Client/Shared/NavMenu.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Shared/NavMenu.razor
@@ -29,11 +29,11 @@
 
 @code {
     private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    //Tips, css klassen 'collapse' kan brukes til å slå sammen menyen
+    private string? NavMenuCssClass;
 
     private void ToggleNavMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+    
     }
 }
