--- a/source/blazorFagdag/blazorFagdag/Client/Shared/NavMenu.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Shared/NavMenu.razor
@@ -11,17 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Hjem
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                <span class="oi oi-plus" aria-hidden="true"></span> Kalkulator
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Været
             </NavLink>
         </div>
     </nav>
@@ -29,11 +29,11 @@
 
 @code {
     private bool collapseNavMenu = true;
-    //Tips, css klassen 'collapse' kan brukes til å slå sammen menyen
-    private string? NavMenuCssClass;
+    //Gjør om til oppgave å implementere dette
+    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
-    
+        collapseNavMenu = !collapseNavMenu;
     }
 }
