--- a/source/blazorFagdag/blazorFagdag/Client/Pages/Index.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Pages/Index.razor
@@ -2,8 +2,9 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hei, Sonat!</h1>
 
-Welcome to your new app.
+Velkommen til fagdag!
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@* Oppgave legg inn Surveyprompt *@
+<SurveyPrompt Title="Hva synes du om fagdagen?" />
