--- a/source/blazorFagdag/blazorFagdag/Client/Shared/MainLayout.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://sonat.no" target="_blank">Sonat</a>
         </div>
 
         <article class="content px-4">
