--- a/source/blazorFagdag/blazorFagdag/Client/Shared/SurveyPrompt.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Shared/SurveyPrompt.razor
@@ -3,10 +3,10 @@
     <strong>@Title</strong>
 
     <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2148851">brief survey</a>
+        Vennligst svar på 
+        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2148851">undersøkelsen</a>
     </span>
-    and tell us what you think.
+    på slutten av dagen
 </div>
 
 @code {
