--- a/source/blazorFagdag/blazorFagdag/Client/Pages/FetchData.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Pages/FetchData.razor
@@ -27,9 +27,8 @@ else
             @foreach (var forecast in forecasts)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
+                    <td>@forecast.Date.ToString("dd/MM/yyyy HH:m:s"))</td>
                     <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
                     <td>@forecast.Summary</td>
                 </tr>
             }
