--- a/source/blazorFagdag/blazorFagdag/Client/Shared/LocationSelector.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Shared/LocationSelector.razor
@@ -20,6 +20,7 @@
     private ElementReference searchInputElement;
     private string? searchTerm;
     private Location? selectedLocation;
+    
     public Location? SelectedLocation
     { 
         get => selectedLocation;
@@ -48,7 +49,7 @@
         locations = new List<Location>
         {
             new Location("Bergen", 60.39299, 5.32415),
-            new Location("Olso", 59.91273, 10.74609),
+            new Location("Oslo", 59.91273, 10.74609),
             new Location("Trondheim", 63.43049, 10.39506),
             new Location("Stavanger", 58.97005, 5.73332),
             new Location("Drammen", 59.74389, 10.20449),
