--- a/source/blazorFagdag/blazorFagdag/Client/Shared/NavMenu.razor
+++ b/source/blazorFagdag/blazorFagdag/Client/Shared/NavMenu.razor
@@ -7,16 +7,11 @@
     </div>
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Hjem
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="calculator">
-                <span class="oi oi-plus" aria-hidden="true"></span> Kalkulator
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -28,12 +23,11 @@
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
     //Gjør om til oppgave å implementere dette
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string? NavMenuCssClass => null;
 
     private void ToggleNavMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+
     }
 }
